--- a/manifests/micro_deploy.yml
+++ b/manifests/micro_deploy.yml
@@ -7,14 +7,14 @@ jobs:
 - name: micro
   template:
   - postgres
+- name: micro_ng
+  template:
   - nats
   - dea_next
   - health_manager_next
   - uaa
   - login
   - collector
-- name: micro_ng
-  template:
   - cloud_controller_ng
   - gorouter
 
@@ -26,15 +26,12 @@ properties:
     management: default
 
   app_domains:
-    - cloudoe.one
-  system_domain: cloudoe.one
+    - 192.168.0.103.xip.io
+  system_domain: 192.168.0.103.xip.io
   system_domain_organization: micro_org
 
-  domain: cloudoe.one
+  domain: 192.168.0.103.xip.io
   env:
-
-  cc_props: ccng
-  hm_props: health_manager_ccng
 
   ccdb:
     template: postgres
@@ -90,7 +87,7 @@ properties:
   nats:
     user: nats
     password: nats
-    address: 127.0.0.1
+    address: 192.168.0.103
     port: 4222
 
   router:
@@ -104,7 +101,7 @@ properties:
 
   cc: &cc
     description: "VMware's Micro Cloud Application Platform"
-    srv_api_uri: http://api.cloudoe.one
+    srv_api_uri: http://api.192.168.0.103.xip.io
     password: password
     token: token
     allow_debug: true
@@ -200,11 +197,11 @@ properties:
         authorities: oauth.login
         secret: c1oudc0w
         authorized-grant-types: authorization_code,client_credentials,refresh_token
-        redirect-uri: http://login.cloudoe.one
+        redirect-uri: http://login.192.168.0.103.xip.io
     no_ssl: true
 
   uaa_client_id: cf
-  uaa_endpoint: http://uaa.cloudoe.one
+  uaa_endpoint: http://uaa.192.168.0.103.xip.io
   uaa_client_auth_credentials:
     username: micro@vcap.me
     password: micr0@micr0
@@ -212,9 +209,9 @@ properties:
   login:
     protocol: http
     links:
-      home: http://console.cloudoe.one
-      passwd: http://console.cloudoe.one
-      signup: http://console.cloudoe.one
+      home: http://console.192.168.0.103.xip.io
+      passwd: http://console.192.168.0.103.xip.io
+      signup: http://console.192.168.0.103.xip.io
 
   collector:
     deployment_name: cf
